k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: square-service
spec:
  selector:
    app: square-model
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cube-service
spec:
  selector:
    app: cube-model
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
