k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /square(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: square-service
            port:
              number: 80
      - path: /cube(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: cube-service
            port:
              number: 80
